test_scripts/errors/fn_too_few_args.shm
fn test(a, b) { a + b; }
test();
