test_scripts/errors/fn_too_few_args.stderr
 1 | fn test(a, b) { a + b; }
 2 | test();
     ^^^^^^
Error: Not enough positional args, arg_count: 0, kwarg_count: 0
